# ridger

./: README.md  pyproject.toml
src/ridger/: __init__.py
src/ridger/examples/: donut.py  mask.py
